2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/pygimp/plug-ins/foggify.py: push/pop a context instead
	of manually restoring the background color.

2007-12-07  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/batch.c (batch_run): only show the message about using the
	default batch interpreter when running in verbose mode.

2007-12-05  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* app/actions/tool-options-commands.c
	(tool_options_save_to_cmd_callback)
	(tool_options_restore_from_cmd_callback): Only care about
	GIMP_CONFIG_PARAM_SERIALIZE properties, fixes bug #498948.

2007-12-04  Michael Natterer  <mitch@gimp.org>

	Merged from trunk:

	* app/core/gimpdrawable.[ch]: added new API
	gimp_drawable_estimate_memsize() and virtual function
	GimpDrawable::estimate_memsize() which estimate the memsize of a
	drawable after scaling/resizing.

	* app/core/gimplayer.c: implement the virtual function and take
	the layer mask into account.

	* app/core/gimpimage-item-list.[ch] (gimp_image_item_list_get_list):
	added const qualifiers.

	* app/core/gimpimage-scale.c (gimp_image_scale_check): use the new
	function to correctly estimate the new size instead of scaling the
	drawables' memsizes including all constant parts. Fixes bug #329468.

2007-12-02  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/tiff-load.c (load_image): removed pointless and
	untranslated warning.

2007-12-02  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/jpeg/jpeg-load.c (jpeg_load_resolution): only set the
	resolution if X_density and Y_density are not zero. Otherwise the
	default resolution would be used anyway and the user sees an
	annoying and confusion warning.

2007-12-01  Martin Nordholts  <martinn@svn.gnome.org>

	Merged from trunk:

	* docs/Makefile.am: Applied patch from Jesper de Jong that removes
	an errant leading space in a command. Fixes bug #500826.

2007-11-30  Sven Neumann  <sven@gimp.org>
